...
                app:layout_constraintBottom_toBottomOf="@+id/tv_description_label"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="7dp"
                android:background="#D6D5D5"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_description_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
...
